update statistic